# OcHd-RustBuild

./: .gitignore  .whitesource  README.md
.cargo/: config.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: dependabot_automation.yml  rust-clippy.yml
main/: Cargo.toml  svgo.config.js
main/metadata/: pack.mcmeta
main/src/: main.rs  tasks.rs  u8set.rs
main/src/image_tasks/: animate.rs  cloneable.rs  color.rs  from_svg.rs  make_semitransparent.rs  mod.rs  png_output.rs  repaint.rs  stack.rs  task_spec.rs  upscale.rs
main/src/materials/: mod.rs
main/src/materials/block/: mod.rs
main/src/materials/block/axe/: giant_mushroom.rs  mod.rs  simple_axe_block.rs  wood.rs
main/src/materials/block/bare_hand/: biome_colorized_plant.rs  cave_vines.rs  crop.rs  mod.rs  simple_bare_hand_block.rs  sunflower.rs  tnt.rs  torch.rs  wool.rs
main/src/materials/block/hoe/: mod.rs  simple_hoe_block.rs
main/src/materials/block/indestructible/: command_block.rs  mod.rs  simple_indestructible_block.rs  structure_jigsaw.rs
main/src/materials/block/liquid/: mod.rs
main/src/materials/block/pickaxe/: bone_block.rs  concrete.rs  copper_oxide.rs  dyed_terracotta.rs  furnace.rs  glass.rs  misc_redstone.rs  mod.rs  nylium.rs  ore.rs  ore_base.rs  polishable.rs  rail.rs  simple_pickaxe_block.rs
main/src/materials/block/shears/: mod.rs  simple_shear_block.rs
main/src/materials/block/shovel/: concrete_powder.rs  dirt_ground_cover.rs  mod.rs  simple_soft_earth.rs
main/src/materials/item/: MusicDisc.kt  amethyst.rs  clock.rs  compass.rs  mod.rs  music_disc.rs  remains.rs  simple_items.rs
main/src/materials/particle/: mod.rs  simple_particle.rs
main/src/texture_base/: dyes.rs  material.rs  mod.rs
