[package]
name = "ochd"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = "0.35.0"
anyhow = "1.0.71"
once_cell = "1.18.0"
const_format = {version = "0.2.31", features = ["fmt", "rust_1_64"]}
rayon = "1.7.0"
simple-logging = "2.0.2"
log = "0.4.19"
itertools = "0.11.0"
replace_with = "0.1.7"
lockfree-object-pool = "0.1.4"
png = "0.17.9"
include_dir = "0.7.3"
tikv-jemallocator = "0.5.0"
zip_next = {version = "0.10.3", default-features = false, features = ["deflate-zlib-ng", "deflate-zopfli"]}
zopfli = {git = "https://github.com/Pr0methean/zopfli.git", default-features = false, features = ["zlib"] }
oxipng = {git = "https://github.com/Pr0methean/oxipng.git", branch = "test_genzopfli", default-features = false, features = ["parallel", "zopfli"]}
bitstream-io = "1.6.0"
num_cpus = "1.16.0"
palette = "0.7.2"
bytemuck = {version = "1.13.1", features = ["derive"]}
