[package]
name = "ochd"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
resvg = "0.41.0"
anyhow = "1.0.82"
once_cell = "1.19.0"
const_format = {version = "0.2.32", features = ["fmt", "rust_1_64"]}
tokio = { version = "1.37", features = ["rt-multi-thread", "rt", "macros", "time", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-macros = "2.2.0"
simplelog = "0.12.2"
log = "0.4.21"
itertools = "0.12.1"
replace_with = "0.1.7"
lockfree-object-pool = "0.1.5"
png = "0.17.13"
include_dir = "0.7.3"
tikv-jemallocator = "0.5.4"
zip = {version = "1.2.3", default-features = false, features = ["deflate-zlib-ng", "deflate-zopfli"]}
oxipng = {version = "9.0.0", default-features = false, features = ["zopfli"]}
bitstream-io = "2.2.0"
palette = "0.7.5"
bytemuck = {version = "1.15.0", features = ["derive", "extern_crate_alloc"]}
futures-util = "0.3.30"
parking_lot = "0.12.1"
